<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/feedbackemail"
            android:inputType="textEmailAddress" />

        <Spinner
            android:id="@+id/SpinnerFeedbackType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/feedbacktypelist"
            android:prompt="@string/feedbacktype" >
        </Spinner>

        <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5" >
        </EditText>

        <CheckBox
            android:id="@+id/CheckBoxResponse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbackresponse" >
        </CheckBox>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/feedbackbutton" >
        </Button>
    </LinearLayout>

</ScrollView>
